fixing layout bug in safari where certain contributor images were not setting the box sizing correct

--- a/themes/pic/sass/_people.sass
+++ b/themes/pic/sass/_people.sass
@@ -13,7 +13,12 @@
     justify-content: flex-start
     align-content: flex-start
     margin-right: 1rem
-    
+
+
+    & > .avatar
+      display: block
+      min-width: 80px
+
     .label
       padding-left: 0.5rem
       font-size: 1.5rem
